--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.redd.it/qrktqewkq8u51.png" />
+    <link rel="icon" href="https://png.pngtree.com/png-clipart/20220616/original/pngtree-cute-yellow-submarine-in-the-sea-png-image_8078765.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
